--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 <body>
     <div id="game"></div>
 </body>
+
 <script src="./script.js"></script>
+<script src="./game_mechanics/grid.js" type="module"></script>
+<script src="./game_mechanics/player.js" type="module"></script>
+
 </html>
