--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="game"></div>
 </body>
 
+<script src="./game_mechanics/player.js"></script>
+<script src="./game_mechanics/grid.js"></script>
 <script src="./script.js"></script>
-<script src="./game_mechanics/grid.js" type="module"></script>
-<script src="./game_mechanics/player.js" type="module"></script>
 
 </html>
